Logo and dashboard cards designed

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 $bodyBg: #F3F4FA;
 $mainBg: #fff;
-$mainColor: #8624DB;
+$mainColor: #FFCC00;
 $txtColor: #4E4D4F;
-$purple: #8624DB;
+$yellow: #FFCC00;
 $orange: #FF9066;
 $white: #fff;
 $black: #000;
