--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 $bodyBg: #F3F4FA;
 $mainBg: #fff;
-$mainColor: #FFCC00;
+$mainColor: #8624DB;
 $txtColor: #4E4D4F;
 $yellow: #FFCC00;
 $orange: #FF9066;
@@ -15,7 +15,7 @@ $fontSizeNormal: 1.125rem;
 $fontSizeMedium: 1.25rem;
 $fontSizeLarge: 1.5625rem;
 
-$sideBarWidth: 384px;
+$sideBarWidth: 350px;
 $sideBarLogoHeight: 171px;
 $spacing: 48px;
 $mobileSpacing: 24px;
