Order listing - Rendered order listing

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 $bodyBg: #F3F4FA;
 $mainBg: #fff;
-$mainColor: #8624DB;
+$mainColor: #1A5381;
 $txtColor: #4E4D4F;
 $yellow: #FFCC00;
 $orange: #FF9066;
@@ -16,7 +16,7 @@ $fontSizeMedium: 1.25rem;
 $fontSizeLarge: 1.5625rem;
 
 $sideBarWidth: 350px;
-$sideBarLogoHeight: 171px;
+$sideBarLogoHeight: 120px;
 $spacing: 48px;
 $mobileSpacing: 24px;
 $borderRadius: 30px;
