Text and Button - Change to primary color

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,2 +1,10 @@
 @forward './global';
 @forward './flex-grid';
+
+.css-sghohy-MuiButtonBase-root-MuiButton-root{
+  background-color: rgb(26, 83, 129) !important;
+  color: rgb(195, 195, 195) !important;
+}
+.css-1e6y48t-MuiButtonBase-root-MuiButton-root{
+  color:rgb(26, 83, 129) !important;
+}
